--- a/src/app/views/boh/approval/app-balancing/app-balancing.component.html
+++ b/src/app/views/boh/approval/app-balancing/app-balancing.component.html
@@ -69,7 +69,7 @@
                 <button cButton color="primary" (click)="approveBalancing(true)" class="me-2">
                   APPROVE
                 </button>
-                <button cButton color="danger" (click)="onRevisi()">
+                <button cButton color="danger" (click)="approveBalancing(false)">
                   REVISI
                 </button>
               </c-col>
