--- a/src/app/views/boh/history/hist-balancing/hist-balancing.component.html
+++ b/src/app/views/boh/history/hist-balancing/hist-balancing.component.html
@@ -66,7 +66,7 @@
   
             <c-row class="mt-3" *ngIf="reportList.length">
               <c-col class="d-flex justify-content-center">
-                <button cButton color="primary"  class="me-2">
+                <button cButton color="primary" (click)="onExportToPDF()" class="me-2">
                   Export to PDF
                 </button>
               </c-col>
