--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -91,11 +91,7 @@
                       Login
                     </button>
                   </c-col>
-                  <c-col class="text-right" xs="6">
-                    <button cButton class="px-0" color="link" type="button">
-                      Forgot password?
-                    </button>
-                  </c-col>
+                  
                 </c-row>
               </form>
             </c-card-body>
@@ -103,12 +99,11 @@
           <c-card [ngStyle]="{'width.%': 44}" class="text-white bg-primary py-5">
             <c-card-body class="text-center">
               <div>
-                <h2>Sign up</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <button [active]="true" cButton class="mt-3" color="primary" routerLink="/register">
+                <h1>Sign up</h1>
+                <h3 class="mt-5">
+                  GudangPro
+                </h3>
+                <button [active]="true" cButton class="mt-5" color="primary" routerLink="/register">
                   Register Now!
                 </button>
               </div>
