--- a/src/app/views/pic-gudang/balancing/balancing.component.html
+++ b/src/app/views/pic-gudang/balancing/balancing.component.html
@@ -65,7 +65,7 @@
                           <button cButton color="danger" variant="outline" class="me-2"  [disabled]="item.isApproved">
                             <c-icon name="cil-trash"></c-icon> Revisi Item In
                           </button>
-                          <button cButton color="danger" variant="outline" class="me-2"  [disabled]="item.isApproved">
+                          <button cButton color="danger" variant="outline" class="me-2" (click)="item.idBarangGudang && goToRevisiOut(item.idBarangGudang, item.idDetailBalancing)"  [disabled]="item.isApproved">
                             <c-icon name="cil-trash"></c-icon> Revisi Item Out
                           </button>
                           <ng-container *ngIf="item.isApproved; else approveButton">
